# tvlm

./: CMakeLists.txt  README.md  tvlm_backend  tvlm_optimizer
tvlm/: NaiveIS.cpp  NaiveIS.h  RegisterAllocator.cpp  RegisterAllocator.h  il.cpp  il.h  il_builder.h  il_insns.h  register_allocator.h  rewriting_rules.h  t86_backend.cpp  t86_backend.h  tvlm.h
tvlm/InstructionSelection/: NaiveIS.cpp  NaiveIS.h  NaiveRegisterAllocator.cpp  NaiveRegisterAllocator.h  ProgramBuilder.cpp  ProgramBuilder.h  RegisterAllocator.cpp  RegisterAllocator.h  register_allocator.cpp  register_allocator.h  rewriting_rules.h
tvlm/analysis/: ColoringDeclarationAnalysis.cpp  ColoringDeclarationAnalysis.h  DeclarationAnalysis.cpp  DeclarationAnalysis.h  ILUsageVisitor.cpp  ILUsageVisitor.h  analysis.cpp  analysis.h  cfg.cpp  cfg.h  cfgNode.cpp  cfgNode.h  constantPropagation_analysis.h  instruction_analysis.cpp  instruction_analysis.h  liveness_analysis.cpp  liveness_analysis.h  liveness_analysisTartget.h  next_use_analysis.cpp  next_use_analysis.h
tvlm/backendUtility/: T86InstrEmul.cpp  T86InstrEmul.h  TargetInstrEmul.cpp  TargetInstrEmul.h  VirtualRegister.cpp  VirtualRegister.h
tvlm/codeGeneration/: Epilogue.cpp  Epilogue.h  FunctionalMacro.h  ProgramBuilder.cpp  ProgramBuilder.h
tvlm/il/: il.cpp  il.h  il_builder.h  il_insns.h  il_insns_predeclare.h
tvlm/optimizer/: ConstantPropagation.cpp  ConstantPropagation.h  DeadCodeElimination.cpp  DeadCodeElimination.h  FunctionInliner.cpp  FunctionInliner.h  Optimizer.cpp  Optimizer.h
tvlm/registerAllocation/: ColoringAllocator.cpp  (+4 more)
(+32 files in other folders)
